# Ollama

./: .gitignore  PROJECT_STATUS.md  README.md  cheat_sheet.md
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
lesson-01-basic-prompting/: README.md  env.example  exercises.py  main.py  pyproject.toml  requirements.txt  solutions.py
lesson-02-prompt-engineering/: README.md  env.example  exercises.py  main.py  pyproject.toml  requirements.txt  solutions.py
lesson-03-chains/: README.md  env.example  exercises.py  main.py  pyproject.toml  requirements.txt  solutions.py
lesson-04-memory/: README.md  env.example  exercises.py  langchain_memory_cheatsheet.md  main.py  memory.db  memory_concepts_simple.md  memory_diagrams.md  pyproject.toml  solutions.py
lesson-05-document-processing/: README.md  document_processing_diagrams.md  env.example  exercises.py  main.py  pyproject.toml
lesson-05-document-processing/documents/: batch_sample_0.txt  batch_sample_1.txt  batch_sample_2.txt  batch_sample_3.txt  batch_sample_4.txt  sample.csv  sample.json  sample.txt
lesson-06-vector-stores/: README.md  env.example  exercises.py  main.py  pyproject.toml  solutions.py  vector_stores_diagrams_fixed.md
lesson-06-vector-stores/data/: README.md
lesson-06-vector-stores/data/sample_documents/: chroma_database_tutorial.txt  embedding_models_guide.txt  faiss_performance_guide.txt  production_vector_systems.txt  similarity_search_techniques.txt  vector_databases_intro.txt
lesson-07-rag-systems/: README.md  env.example  exercises.py  main.py  pyproject.toml  solutions.py
lesson-08-agents-tools/: README.md  env.example  exercises.py  main.py  pyproject.toml  solutions.py
lesson-08-agents-tools/data/: agent_configs.json  sample_scenarios.json
lesson-08-agents-tools/tools/: __init__.py  calculator_tool.py  email_tool.py  file_manager_tool.py  weather_tool.py  web_search_tool.py
lesson-09-production/: README.md
shared-resources/utils/: __init__.py  error_handling.py  llm_setup.py  prompt_helpers.py
